<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/textView_login_1"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:text="@string/layout_m_text_1"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/textView_login_2"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/layout_m_text_2"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_1" />

    <EditText
        android:id="@+id/enterUsername_login_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/layout_m_text_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_login_1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPassword_login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:hint="@string/layout_m_text_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_login_2"
        app:layout_constraintTop_toBottomOf="@+id/enterUsername_login_1"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/buttonLogin_login_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_m_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_2"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/buttonRegister_login_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/layout_m_button_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin_login_1"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword_login_2"
        app:layout_constraintVertical_bias="0.497" />

    <RadioGroup
        android:id="@+id/selectSex_login_1"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695">

        <RadioButton
            android:id="@+id/select_login_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/layout_login_radioButton_1" />

        <RadioButton
            android:id="@+id/select_login_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_login_radioButton_2" />
    </RadioGroup>

    <RadioButton
        android:id="@+id/select_login_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_login_radioButton_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

</androidx.constraintlayout.widget.ConstraintLayout>